--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -18,6 +18,11 @@
 <h3> ITEMS </h3>
 <% @list.items.each do |item| %>
   <%= render partial: 'shared/items/check_button', locals: {item: item, depth: 0} %>
+  <% if item.items %>
+    <% item.items.each do |subitem|%>
+      <%= render partial: 'shared/items/check_button', locals: {item: subitem, depth: 1} %>
+    <%end%>
+  <%end%>
 <%end%>
  
 <hr />
