--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <%= render partial: 'shared/users/user_actions', locals: {user: current_user} %>
     <%= yield %>
   </body>
 </html>
