--- a/app/views/user/lists/show.html.erb
+++ b/app/views/user/lists/show.html.erb
@@ -27,5 +27,4 @@
  
 <hr />
 
-<%= link_to 'Edit', edit_list_path(@list) %> |
-<%= link_to 'Back', lists_path %>
+<%= link_to 'Edit', edit_user_list_path(@list) %>
