--- a/app/views/shared/users/_user_actions.html.erb
+++ b/app/views/shared/users/_user_actions.html.erb
@@ -1,6 +1,7 @@
 <%if user%>
   <h1> Bem vindo <%= user.name%>! </h1>
   | <%= link_to "minhas listas", user_lists_path(user.id) %>
+  | <%= link_to "Minhas Favoritas", user_favorited_lists_path(user.id) %>
 <%else%>
   <h1> Bem vindo, estranho! </h1>
   | <%= link_to "Log in", new_user_session_path %>
