[UPDATE] Adding some [g]old css

--- a/app/views/user/favorited_lists/index.html.erb
+++ b/app/views/user/favorited_lists/index.html.erb
@@ -1,30 +1,19 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Minhas Listas</h1>
+<h1>Minhas Favoritas</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Checked</th>
-      <th>Shared</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
+<table class='lists'>
+  <%= render partial: 'shared/lists/list_table_header' %>
+  
   <tbody>
     <% @lists.each do |list| %>
       <tr>
         <td><%= list.name %></td>
-        <td><%= list.checked %></td>
-        <td><%= list.shared %></td>
-        <td><%= link_to 'Show', list %></td>
-        <td><%= link_to 'Remover', list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= t(list.checked) %></td>
+        <td><%= t(list.shared) %></td>
+        <td><%= link_to t('shared.actions.show'), list, class:'button1' %></td>
+        <td><%= link_to t('shared.actions.destroy'), list, method: :delete, data: { confirm: 'Are you sure?' }, class:'button1'  %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New List', new_user_list_path %>
