--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,22 +2,22 @@
 
 <h1>Listas Públicas</h1>
 
-<table>
+<table class="lists">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>owner</th>
-      <th colspan="3"></th>
+      <th> <%= t('active_record.attributes.list.name')%> </th>
+      <th> <%= t('active_record.attributes.list.user')%> </th>
+      <th colspan="3"> <%= t('shared.actions.actions')%> </th>
     </tr>
   </thead>
 
   <tbody>
     <% @lists.each do |list| %>
-      <tr class='list' id="lista_<%=list.id%>">
-        <td id="lista_<%=list.id%>_name" ><%= list.name %></td>
-        <td id="lista_<%=list.id%>_user" ><%= list.user.name %></td>
-        <td><%= link_to 'Show', list %></td>
-        <td><%= link_to "Favoritar", new_user_favorited_list_path(user_id: current_user.id, list_id: list.id) %></td>
+      <tr class='list' id="list_<%=list.id%>">
+        <td id="list_<%=list.id%>_name" ><%= list.name %></td>
+        <td id="list_<%=list.id%>_user" ><%= list.user.name %></td>
+        <td><%= link_to t('shared.actions.show'), list, class:'button1' %></td>
+        <td><%= link_to t('shared.actions.favorite'), new_user_favorited_list_path(user_id: current_user.id, list_id: list.id), class:'button1' %></td>
      </tr>
     <% end %>
   </tbody>
