--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -15,16 +15,9 @@
   <%= @list.shared %>
 </p>
 
-<h3> ITEMS </h3>
-<% @list.items.each do |item| %>
-  <%= render partial: 'shared/items/check_button', locals: {item: item, depth: 0} %>
-  <% if item.items %>
-    <% item.items.each do |subitem|%>
-      <%= render partial: 'shared/items/check_button', locals: {item: subitem, depth: 1} %>
-    <%end%>
-  <%end%>
-<%end%>
- 
+<%= render @list.items.where(parent_id: nil), locals: {itemable: @list} %>
+<%= render partial: "items/form", locals: {itemable: @list} %>
+
 <hr />
 
 <%= link_to 'Edit', edit_list_path(@list) %> |
