--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,7 +45,7 @@ body{
   background-color: pink;
   position: absolute;
   right: 2rem;
-  bottom: 2rem;
+  top: 2rem;
   box-shadow: 0.1rem 0.1rem #888888;
   padding: 0.3rem;
 }
