[UPDATE] Some lost translations

--- a/app/views/user/lists/index.html.erb
+++ b/app/views/user/lists/index.html.erb
@@ -21,4 +21,4 @@
 
 <br>
 
-<%= link_to 'New List', new_user_list_path, class:'button1 new' %>
+<%= link_to t('shared.actions.new_list'), new_user_list_path, class:'button1 new' %>
