--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,9 @@
     <main>
       <%= yield %>
     </main>
+    <div class="notifications" >
+      <h5> Notificações </h5>
+      <div class="notification-box" />
+    </div>
   </body>
 </html>
