--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,17 +1,17 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>Nome:</strong>
   <%= @list.name %>
 </p>
 
 <p>
-  <strong>Checked:</strong>
+  <strong>Completa?:</strong>
   <%= @list.checked %>
 </p>
 
 <p>
-  <strong>Shared:</strong>
+  <strong>Pública?:</strong>
   <%= @list.shared %>
 </p>
 
