--- a/app/views/shared/users/_user_actions.html.erb
+++ b/app/views/shared/users/_user_actions.html.erb
@@ -8,5 +8,5 @@
     | <%= link_to "log in", new_user_session_path, class:"button1" %>
     | <%= link_to "sign up", new_user_registration_path, class:"button1" %>
   <%end%>
-    | <%= link_to "index", lists_path, class:"button1" %> |
+    | <%= link_to "Home", lists_path, class:"button1" %> |
 </div>
