--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -15,8 +15,7 @@
     <div>
       <%= ff.label :content %>
       <%= ff.text_field :content %>
-
-
+      <%= ff.check_box :checked %>
     </div>
   <% end %>
 
