--- a/app/views/user/lists/index.html.erb
+++ b/app/views/user/lists/index.html.erb
@@ -13,7 +13,7 @@
         <td><%= t(list.shared) %></td>
         <td><%= link_to t('shared.actions.show'), list, class:'button1' %></td>
         <td><%= link_to t('shared.actions.edit'), edit_list_path(list), class:'button1'  %></td>
-        <td><%= link_to t('shared.actions.destroy'), list, method: :delete, data: { confirm: 'Are you sure?' }, class:'button1'  %></td>
+        <td><%= link_to t('shared.actions.destroy'), list, method: :delete, data: { confirm: t('shared.actions.confirm') }, class:'button1'  %></td>
       </tr>
     <% end %>
   </tbody>
